Inline info box spacing fix

--- a/app/stylesheets/UI.css.less
+++ b/app/stylesheets/UI.css.less
@@ -387,9 +387,11 @@ html,body { background: #000 url(images/gradient_background.png) repeat-y 50% 0;
 
 
 .inline-info {
-  position    : relative;
+  position    : absolute;
+  top         : 15px;
+  left        : 5px;
   border      : 1px solid #00263f;
-  width       : 410px;
+  width       : 396px;
   margin      : 72px 0 0 12px;
   padding     : 24px 24px 24px 64px;
   color       : #fff;
